--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = base_de_projet
+PRODUCT_NAME = teenstar
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.alban.baseDeProjet
+PRODUCT_BUNDLE_IDENTIFIER = com.alban.teenstar
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2021 com.alban. All rights reserved.
