--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -22,7 +22,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>base_de_projet</string>
+	<string>teenstar</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -76,7 +76,7 @@
 <key>FacebookClientToken</key>
 <string>fdc03c238dcbcaee1ac70dfd91c67c65</string>
 <key>FacebookDisplayName</key>
-<string>BASE DE PROJET</string>
+<string>TeenSTAR</string>
 
 <key>LSApplicationQueriesSchemes</key>
 <array>
