[Icon] Icon application TS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,7 +80,7 @@ flutter_icons:
 
 flutter_native_splash:
   #color: "#42a5f5"
-  background_image: "assets/splash.png"
+  background_image: "assets/splash.jpg"
 
 flutter:
   uses-material-design: true
