--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   uuid: ^3.0.7
   flutter_signin_button: ^2.0.0
   easy_sidemenu: ^0.4.1
-
+  sqflite: ^2.2.1
 
 dev_dependencies:
   build_runner: ^2.2.0
