--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   implicitly_animated_reorderable_list: ^0.4.2
-  injectable: ^1.5.0
+  injectable: ^2.1.0
   intl: ^0.17.0
   json_annotation: ^4.7.0
   kt_dart: ^1.0.0
@@ -49,6 +49,9 @@ dependencies:
   easy_sidemenu: ^0.4.1
   sqflite: ^2.2.1
   shared_preferences: ^2.0.15
+  pdf: ^3.8.4
+  open_filex: ^4.3.2
+  path_provider: ^2.0.11
 
 dev_dependencies:
   build_runner: ^2.2.0
@@ -58,7 +61,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
-  injectable_generator: ^1.5.4
+  injectable_generator: ^2.1.3
   integration_test:
     sdk: flutter
   json_serializable: ^6.3.1
