--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -83,6 +83,8 @@
 			<string>fb-messenger-share-api</string>
 			<string>fbauth2</string>
 			<string>fbshareextension</string>
+			<string>sms</string>
+  <string>tel</string>
 		</array>
 		<key>UIStatusBarHidden</key>
 		<false/>
