--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   pdf: ^3.8.4
   open_filex: ^4.3.2
   path_provider: ^2.0.11
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   build_runner: ^2.2.0
