--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,11 @@ dependencies:
   easy_sidemenu: ^0.4.1
   sqflite: ^2.2.1
   shared_preferences: ^2.0.15
-  pdf: ^3.8.4
+  #pdf: ^3.8.4
   open_filex: ^4.3.2
   path_provider: ^2.0.11
   url_launcher: ^6.1.7
+  syncfusion_flutter_pdf: ^20.4.44
 
 dev_dependencies:
   build_runner: ^2.2.0
