[Observation] Correction ajout bug observation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.3.0+3
+version: 0.4.0+4
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -126,6 +126,7 @@ flutter:
     - assets/icon_app/icon_guide_avance.png
     - assets/icon_app/icon_pdf.png
     - assets/icon_app/icon_principe_de_base.png
+    - assets/icon/icon-assets/main_flower.png
 
 
   
