--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -90,5 +90,7 @@
 		<false/>
 		<key>CADisableMinimumFrameDurationOnPhone</key>
 		<true/>
-	</dict>
+		<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
+</dict>
 </plist>
