--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,7 @@ flutter:
     - assets/icon_observation/icon_humeur_autre.png
     - assets/icon_observation/icon_humeur_bonne.png
     - assets/icon_observation/icon_humeur_changeante.png
+    - assets/icon_observation/icon_humeur_pas_emotion.png
     - assets/icon_observation/icon_humeur_envie_tranquille.png
     - assets/icon_observation/icon_humeur_nervosite.png
     - assets/icon_observation/icon_humeur_neutre.png
