[PDF] Pdf sur android corrigé

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,12 @@
   
 </queries>
 
+<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
+
+
    <application
         android:label="TeenSTAR"
         android:icon="@mipmap/ic_launcher"
@@ -57,5 +63,16 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            
+        <provider
+                android:name="androidx.core.content.FileProvider"
+                android:authorities="com.alban.teenstar"
+                android:exported="false"
+                android:grantUriPermissions="true">
+            <meta-data
+                    android:name="android.support.FILE_PROVIDER_PATHS"
+                    android:resource="@xml/filepaths" />
+        </provider>
+
     </application>
 </manifest>
