--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   path_provider: ^2.0.11
   url_launcher: ^6.1.7
   syncfusion_flutter_pdf: ^20.4.52
+  flutter_full_pdf_viewer: ^1.0.6
 
 dev_dependencies:
   build_runner: ^2.2.0
@@ -95,6 +96,7 @@ flutter:
         - asset: assets/fonts/DejaVuSans-Bold.ttf
           weight: 700
   assets:
+    - assets/guide.pdf
     - assets/logo_vide.png
     - assets/icon/logo.png
     - assets/icon_app/icon_hachurage.png
