--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   url_launcher: ^6.1.7
   syncfusion_flutter_pdf: ^20.4.52
   flutter_full_pdf_viewer: ^1.0.6
+  logger: ^1.3.0
 
 dev_dependencies:
   build_runner: ^2.2.0
@@ -73,6 +74,7 @@ dev_dependencies:
   auto_route_generator: ^5.0.2
   flutter_lints: ^2.0.1
   flutter_native_splash: ^2.2.16
+  ansicolor: ^2.0.1
 
 flutter_icons:
   android: true
