--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.8+17
+version: 1.0.9+19
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -56,6 +56,7 @@ dependencies:
   syncfusion_flutter_pdf: ^20.4.52
   flutter_full_pdf_viewer: ^1.0.6
   logger: ^1.3.0
+  permission_handler: ^10.2.0
 
 dev_dependencies:
   build_runner: ^2.2.0
