--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,8 @@ dependencies:
   flutter_full_pdf_viewer: ^1.0.6
   logger: ^1.3.0
   permission_handler: ^10.2.0
+  auto_size_text: ^3.0.0
+
 
 dev_dependencies:
   build_runner: ^2.2.0
