[Nom] Sur android on change le nom en Kyklos

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -76,7 +76,7 @@
 <key>FacebookClientToken</key>
 <string>fdc03c238dcbcaee1ac70dfd91c67c65</string>
 <key>FacebookDisplayName</key>
-<string>TeenSTAR</string>
+<string>Kyklos</string>
 
 <key>LSApplicationQueriesSchemes</key>
 <array>
