--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.1.6+25
+version: 1.2.0+27
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -38,7 +38,7 @@ dependencies:
   get_it: ^7.2.0
   implicitly_animated_reorderable_list: ^0.4.2
   injectable: ^2.1.0
-  intl: ^0.17.0
+  intl: ^0.18.1
   json_annotation: ^4.7.0
   kt_dart: ^1.0.0
   package_info_plus: ^3.0.2
@@ -54,7 +54,7 @@ dependencies:
   path_provider: ^2.0.11
   url_launcher: ^6.1.7
   syncfusion_flutter_pdf: ^20.4.52
-  flutter_full_pdf_viewer: ^1.0.6
+  #flutter_full_pdf_viewer: ^1.0.6
   logger: ^1.3.0
   permission_handler: ^10.2.0
   auto_size_text: ^3.0.0
