--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.1+28
+version: 1.3.0+32
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -23,9 +23,9 @@ environment:
 dependencies:
   another_flushbar: ^1.12.29
   auto_route: ^5.0.4
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.6
   dartz: ^0.10.0-nullsafety.2
-  encrypt: ^5.0.1
+  encrypt: ^5.0.3
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.5+1
@@ -87,6 +87,11 @@ flutter_icons:
 flutter_native_splash:
   #color: "#42a5f5"
   background_image: "assets/splash.jpg"
+  fit: BoxFit.cover
+  image: "assets/splash.jpg"
+  image_dark: "assets/splash.jpg"
+  android_12:
+    image: "assets/icon/icon.png"
 
 flutter:
   uses-material-design: true
