--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,15 +49,15 @@ dependencies:
   easy_sidemenu: ^0.4.1
   sqflite: ^2.2.1
   shared_preferences: ^2.0.15
-  #pdf: ^3.8.4
   open_filex: ^4.3.2
   path_provider: ^2.0.11
   url_launcher: ^6.1.7
   syncfusion_flutter_pdf: ^20.4.52
-  #flutter_full_pdf_viewer: ^1.0.6
   logger: ^1.3.0
   permission_handler: ^10.4.3
   auto_size_text: ^3.0.0
+  awesome_notifications_core: ^0.8.1
+  awesome_notifications: ^0.8.2
 
 
 dev_dependencies:
