--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,4 +83,6 @@ dependencies {
     implementation "androidx.activity:activity:1.6.1"
     implementation 'androidx.core:core:1.9.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
 }
