--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -158,6 +158,7 @@ flutter:
     - assets/icon_observation/sensation/sensation_M.png
     - assets/icon_observation/sensation/sensation_np.png
     - assets/icon_observation/sensation/sensation_S.png
+    - assets/icon_observation/sensation/sensation_D
     - assets/icon_observation/douleurs/douleur_Autre.png
     - assets/icon_observation/douleurs/douleur_DS.png
     - assets/icon_observation/douleurs/douleur_DV.png
