--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.3.7+42
+version: 1.3.8+43
 
 environment:
   sdk: ">=2.15.0 <3.0.0"
@@ -107,6 +107,9 @@ flutter:
           style: italic
         - asset: assets/fonts/myriadpro/MYRIADPRO-BOLD.OTF
           weight: 700
+    - family: Arial
+      fonts:
+        - asset: assets/fonts/arial-unicode-ms.ttf
   assets:
     - assets/logo_vide.png
     - assets/icon/logo.png
