--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,14 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.4.0+45
+version: 1.4.1+46
 
 environment:
-  sdk: ">=2.15.0 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   another_flushbar: ^1.12.29
-  auto_route: ^5.0.4
+  auto_route: ^8.1.3
   cupertino_icons: ^1.0.6
   dartz: ^0.10.0-nullsafety.2
   encrypt: ^5.0.3
@@ -32,13 +32,13 @@ dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^2.1.1
+  flutter_riverpod: ^2.5.1
   flutter_slidable: ^2.0.0
   freezed_annotation: ^2.2.0
   get_it: ^7.2.0
   implicitly_animated_reorderable_list: ^0.4.2
   injectable: ^2.1.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   json_annotation: ^4.7.0
   kt_dart: ^1.0.0
   package_info_plus: ^3.0.2
@@ -59,7 +59,7 @@ dependencies:
   awesome_notifications_core: ^0.8.1
   awesome_notifications: ^0.8.2
   flutter_html: ^3.0.0-beta.2
-  flutter_widget_from_html_core: ^0.14.7
+  flutter_widget_from_html_core: ^0.14.12
   flutter_cached_pdfview: ^0.4.2
 
 dev_dependencies:
@@ -76,7 +76,7 @@ dev_dependencies:
   json_serializable: ^6.3.1
   lint: ^1.10.0
   test: ^1.21.4
-  auto_route_generator: ^5.0.2
+  auto_route_generator: ^8.0.0
   flutter_lints: ^2.0.1
   flutter_native_splash: ^2.2.16
   ansicolor: ^2.0.1
