--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,43 +21,43 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  another_flushbar: ^1.12.29
+  another_flushbar: ^1.12.30
   auto_route: ^8.1.3
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   dartz: ^0.10.0-nullsafety.2
   encrypt: ^5.0.3
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.18.5+1
+  flutter_hooks: ^0.18.6
   flutter_launcher_icons: ^0.11.0
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   flutter_slidable: ^3.1.0
-  freezed_annotation: ^2.2.0
-  get_it: ^7.2.0
+  freezed_annotation: ^2.4.1
+  get_it: ^7.7.0
   implicitly_animated_reorderable_list: ^0.4.2
-  injectable: ^2.1.0
+  injectable: ^2.4.2
   intl: ^0.19.0
   json_annotation: ^4.9.0
-  kt_dart: ^1.0.0
-  package_info_plus: ^3.0.2
-  provider: ^6.0.4
+  kt_dart: ^1.1.0
+  package_info_plus: ^8.0.0
+  provider: ^6.1.2
   rxdart: ^0.27.7
-  uuid: ^3.0.7
+  uuid: ^4.4.0
   flutter_signin_button: ^2.0.0
-  easy_sidemenu: ^0.4.1
-  sqflite: ^2.2.1
-  shared_preferences: ^2.0.15
-  open_filex: ^4.3.2
-  path_provider: ^2.0.11
-  url_launcher: ^6.1.7
-  syncfusion_flutter_pdf: ^20.4.52
-  logger: ^1.3.0
+  easy_sidemenu: ^0.6.0
+  sqflite: ^2.3.3+1
+  shared_preferences: ^2.2.3
+  open_filex: ^4.4.0
+  path_provider: ^2.1.3
+  url_launcher: ^6.2.6
+  syncfusion_flutter_pdf: ^25.2.5
+  logger: ^2.3.0
   permission_handler: ^10.4.3
   auto_size_text: ^3.0.0
-  awesome_notifications_core: ^0.8.1
-  awesome_notifications: ^0.8.2
+  awesome_notifications_core: ^0.9.3
+  awesome_notifications: ^0.9.3+1
   flutter_html: ^3.0.0-beta.2
   flutter_widget_from_html_core: ^0.14.12
   flutter_cached_pdfview: ^0.4.2
@@ -70,16 +70,16 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.1.0+1
-  injectable_generator: ^2.1.3
+  injectable_generator: ^2.6.1
   integration_test:
     sdk: flutter
   json_serializable: ^6.3.1
-  lint: ^1.10.0
+  lint: ^2.3.0
   test: ^1.21.4
   auto_route_generator: ^8.0.0
-  flutter_lints: ^2.0.1
+  flutter_lints: ^4.0.0
   flutter_native_splash: ^2.2.16
-  ansicolor: ^2.0.1
+  ansicolor: ^2.0.2
 
 flutter_icons:
   android: true
